--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -77,7 +78,7 @@ footer p {
   font-size: 16px;
   line-height: 24px;
   opacity: 0.7;
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 footer li {
   list-style: none;
