--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,17 @@ body {
 }
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
+  /* grid-template-columns: 1fr 1fr; */
   grid-gap: 64px;
+}
+.img-responsive {
+  max-width: 100%;
+}
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+.grid-3-columns-with-first-narrow {
+  grid-template-columns: 1fr 2fr 2fr;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -53,9 +62,38 @@ header a {
   margin-top: 32px;
   display: inline-block;
 }
+main {
+  background-color: white;
+}
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+  margin: 0;
+}
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
+}
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 footer {
   color: white;
@@ -66,7 +104,7 @@ footer {
     url("../images/tech-3.avif");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 0;
+  /* padding: 100px 0; */
 }
 footer h3 {
   font-weight: 700;
@@ -104,5 +142,12 @@ footer a {
   }
   header h3 {
     font-size: 12px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
+  section {
+    padding: 30px 0;
   }
 }
