--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: "Poppins", sans-serif;
   background: #272044;
 }
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -26,6 +27,13 @@ body {
 }
 .grid-3-columns-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
+}
+.embed {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+.instagram-embeds {
+  margin: 30px 0;
 }
 .card {
   background: white;
@@ -177,6 +185,7 @@ footer a {
   color: white;
   opacity: 0.7;
 }
+
 @media (max-width: 960px) {
   header {
     padding: 60px 0;
